# Brain_Differences_NeuroHearing

./: .gitignore  config.yaml  pyproject.toml
src/braindiff/: calculate_normal_trends.py
src/braindiff/common/: tools.py
src/braindiff/objects/: preprocess_data.py  trends.py
